[package]
name = "phys-engine"
version = "0.1.0"
edition = "2021"
authors = ["Author"]
description = "Physics engine library for game development"
license = "MIT"
repository = "https://github.com/username/phys-engine"
readme = "README.md"
keywords = ["physics", "game", "simulation", "engine", "collision"]
categories = ["game-engines", "simulation"]

[dependencies]
nalgebra = "0.32.3"
approx = "0.5.1"
thiserror = "1.0.56"
bitflags = "2.4.1"
serde = { version = "1.0.197", features = ["derive"], optional = true }

[dev-dependencies]
# Development dependencies are omitted to allow offline testing

[features]
default = []
serialize = ["serde", "nalgebra/serde-serialize"]
parallel = []

# Benchmarks are commented out until we create the benchmark files
# [[bench]]
# name = "physics_bench"
# harness = false

[[example]]
name = "bevy_balls"
path = "examples/bevy_balls.rs"
required-features = []

[[example]]
name = "bevy_stack"
path = "examples/bevy_stack.rs"
required-features = []

[[example]]
name = "console_balls"
path = "examples/console_balls.rs"
required-features = []

[[example]]
name = "ascii_bounce"
path = "examples/ascii_bounce.rs"
required-features = []

[[example]]
name = "advanced_physics_console"
path = "examples/advanced_physics_console.rs"
required-features = []

[[example]]
name = "ascii_raytracer"
path = "examples/ascii_raytracer.rs"
required-features = []

[[example]]
name = "laser_reflection"
path = "examples/laser_reflection.rs"
required-features = []

[[example]]
name = "simple_laser_reflection"
path = "examples/simple_laser_reflection.rs"
required-features = []